Add css stylesheet to html webpages
the css stylesheet was added to the previous odin-recipes project to
give it a better look and feel.

--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>sharky-homepage</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class=page-3>
+    <header class="head">
     <h1><strong></strong> Sharkbaby&apos;s Kitchen Recipes</strong></h1>
-    <img src="https://img.freepik.com/premium-vector/chef-shark-cartoon-cooking_70172-899.jpg?w=2000" alt="a cartoon shark chef" width="500">
+    <img src="https://img.freepik.com/premium-vector/chef-shark-cartoon-cooking_70172-899.jpg" alt="a cartoon shark chef" width="300">
+    </header>
 
-    <p>Here are some amazing recipes to <strong>Chef Sharkbaby&apos;s Kitchen</strong></p>
+    <div class="down">  
+         <p>Here are some amazing recipes to <strong>Chef Sharkbaby&apos;s Kitchen</strong></p>
 
         <ul>
             <li><em><a href="recipes/jollof-rice.html" target="_blank">jollof-rice</a> dish.</em></li>
             <li><em><a href="recipes/west-african-grilled-beef.html" target="_blank">west-african-grilled-beef</a> dish.</em></li>
             <li><em><a href="recipes/chicken-katsu.html" target="_blank">chicken-katsu</a> dish.</em></li>
         </ul>
+    </div> 
 </body>
 </html>
