--- a/recipes/chicken-katsu.html
+++ b/recipes/chicken-katsu.html
@@ -4,21 +4,55 @@
     <meta charset="UTF-8">
 
     <title>chicken katsu recipe</title>
+    <style>
+         body {
+                background-color: rgb(116, 215, 240);
+                font-family: 'Times New Roman', Times, serif;
+
+           
+            }
+             h1 {
+                text-align: center;
+                padding: auto;
+                background-color: #38b3c9;
+            }
+            .float {
+                float: right;
+                width: 65%;
+                margin: auto;
+                background-color: #85edff;
+                padding-left: 1.6em;
+                padding-bottom: 18.6em;
+            }
+            
+            h3 {
+                font-weight: 1000;
+                text-align: center;
+            }
+            .boom,.dwi {
+             background-color: #85edff;
+             padding: auto;
+             padding-top: 1em;
+             padding-bottom: 1em;
+            }
+    </style>
 </head>
 <body>
 
     <h1><em>Chicken Katsu Recipe</em></h1>
-        <img src="../images/katsu.webp" alt="chicken katsu served with rice and green beans" width="500">
+        <img src="../images/katsu.webp" alt="chicken katsu served with rice and green beans" width="500" height="450">
+        <div class="float">
         <h2>Chef Sharkbaby's famous chicken katsu recipe;</h2> 
 
         <p>Katsu is a Japanese dish of crispy fried cutlets coated with Panko bread crumbs.
              Popular varieties are chicken katsu (like this recipe) and tonkatsu (which is made with pork)..</p>
    
           <p>You'll find a detailed ingredient list and step-by-step instructions in the recipe below, </p>
+        </div>
 
           <h3><em>Ingredients</em></h3>
 
-          <ul>
+          <ul class="boom">
             <li>4 skinless, boneless chicken breast halves - pounded to 1/2 inch thickness</li>
 
             <li>salt and pepper to taste</li>
@@ -36,7 +70,7 @@
 
         <h3><em>Steps</em></h3>
 
-        <ol>
+        <ol class="dwi">
             <li>Season chicken breasts on both sides with salt and pepper. Place flour, beaten egg, and panko 
                 crumbs into separate shallow dishes. 
                 Coat chicken breasts in flour, shaking off any excess; dip into egg, and then press into panko
